platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_11.platter
start() {
    x = x + "hello" + 1;
}